--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+key.txt
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
